<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inputOutputTextView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:layout_margin="8dp"
        android:textSize="48sp"/>

    <LinearLayout
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <Button
            android:onClick="onDigit"
            android:id="@+id/btt_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <Button
            android:onClick="onDigit"
            android:id="@+id/btt_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <Button
            android:onClick="onDigit"
            android:id="@+id/btt_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btt_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="26sp"
            android:onClick="onOperator"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <Button
            android:onClick="onDigit"
            android:id="@+id/btt_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <Button
            android:onClick="onDigit"
            android:id="@+id/btt_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <Button
            android:onClick="onDigit"
            android:id="@+id/btt_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btt_sub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sub"
            android:textSize="26sp"
            android:onClick="onOperator"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirddRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <Button
            android:onClick="onDigit"
            android:id="@+id/btt_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <Button
            android:onClick="onDigit"
            android:id="@+id/btt_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <Button
            android:onClick="onDigit"
            android:id="@+id/btt_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btt_tim"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tim"
            android:textSize="26sp"
            android:onClick="onOperator"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/FourthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <Button
            android:onClick="onDigit"
            android:id="@+id/btt_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="2"
            android:text="@string/_0"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btt_CLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/clr"
            android:textSize="26sp"
            android:onClick="onClear"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btt_div"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/div"
            android:textSize="26sp"
            android:onClick="onOperator"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginEnd="2dp"
            android:text="@string/res"
            android:textSize="26sp"
            android:onClick="onResult"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btt_coma"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/coma"
            android:textSize="26sp"
            android:onClick="onComa"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>